# arikkei

./: CMakeLists.txt  README.md
arikkei/: CMakeLists.txt  arikkei-cache.c  arikkei-cache.h  arikkei-dict.c  arikkei-dict.h  arikkei-iolib.c  arikkei-iolib.h  arikkei-strlib.c  arikkei-strlib.h  arikkei-threads.h  arikkei-token.c  arikkei-token.h  arikkei-url.c  arikkei-utils.c  arikkei-utils.h  tinycthread.c  tinycthread.h
tests/: CMakeLists.txt  dict.c  test.c
